// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> with default props matches with snapshot 1`] = `
<div
  className="rmq-ed8cebd3"
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <span
    data-radium={true}
    style={
      Object {
        "backgroundImage": "linear-gradient(#eee 50%,
      rgba(255, 255, 255, 0) 0%)",
        "backgroundPosition": "right",
        "backgroundRepeat": "repeat-y",
        "backgroundSize": "2px 8px",
        "height": "100%",
        "left": -1,
        "position": "absolute",
        "top": 0,
        "width": 2,
      }
    }
  />
  <ol
    data-radium={true}
    style={
      Object {
        "listStyleType": "none",
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <li
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <span
        className="rmq-d8dcb428 rmq-de3c3f8b k-u-size-tiny"
        data-radium={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "border": "2px solid #eee",
            "borderRadius": "50%",
            "boxSizing": "border-box",
            "display": "flex",
            "flex": "0 0 50px",
            "fontFamily": "Maax, Helvetica, Arial, sans-serif",
            "fontWeight": 600,
            "height": 50,
            "justifyContent": "center",
            "letterSpacing": ".01rem",
            "lineHeight": 0,
            "marginBottom": 80,
            "marginLeft": -25,
            "marginRight": 40,
            "marginTop": 80,
            "position": "relative",
            "width": 50,
          }
        }
      >
        1
      </span>
      <div
        className="marger__StyledMarger-q3lecu-0 kcPkMx"
      >
        foobar
      </div>
    </li>
  </ol>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 639px){ .rmq-ed8cebd3{margin-left: 20px !important;}}
@media (max-width: 639px){ .rmq-d8dcb428{margin-right: 20px !important;}}
@media (min-width: 640px) and
        (max-width: 1079px){ .rmq-de3c3f8b{margin-top: 60px !important;
margin-bottom: 60px !important;}}",
      }
    }
  />
</div>
`;

exports[`<Timeline /> with itemHeight props matches with snapshot 1`] = `
<div
  className="rmq-ed8cebd3"
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <span
    data-radium={true}
    style={
      Object {
        "backgroundImage": "linear-gradient(#eee 50%,
      rgba(255, 255, 255, 0) 0%)",
        "backgroundPosition": "right",
        "backgroundRepeat": "repeat-y",
        "backgroundSize": "2px 8px",
        "height": "100%",
        "left": -1,
        "position": "absolute",
        "top": 0,
        "width": 2,
      }
    }
  />
  <ol
    data-radium={true}
    style={
      Object {
        "listStyleType": "none",
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <li
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <span
        className="rmq-d8dcb428 rmq-adc5028b k-u-size-tiny"
        data-radium={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "border": "2px solid #eee",
            "borderRadius": "50%",
            "boxSizing": "border-box",
            "display": "flex",
            "flex": "0 0 50px",
            "fontFamily": "Maax, Helvetica, Arial, sans-serif",
            "fontWeight": 600,
            "height": 50,
            "justifyContent": "center",
            "letterSpacing": ".01rem",
            "lineHeight": 0,
            "marginBottom": 40,
            "marginLeft": -25,
            "marginRight": 40,
            "marginTop": 40,
            "position": "relative",
            "width": 50,
          }
        }
      >
        1
      </span>
      <div
        className="marger__StyledMarger-q3lecu-0 kcPkMx"
      >
        foobar
      </div>
    </li>
  </ol>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 639px){ .rmq-ed8cebd3{margin-left: 20px !important;}}
@media (max-width: 639px){ .rmq-d8dcb428{margin-right: 20px !important;}}
@media (min-width: 640px) and
        (max-width: 1079px){ .rmq-adc5028b{margin-top: 20px !important;
margin-bottom: 20px !important;}}",
      }
    }
  />
</div>
`;
